[project]
name = "free-gpt35-api"
version = "0.1.0"
description = "free-gpt35-api is a simple API wrapper for ChatGPT Web"
authors = [
    { name = "limbo", email = "pythonsuper@gmail.com" }
]
dependencies = [
    "fastapi>=0.110.1",
    "uvicorn>=0.29.0",
    "asyncio>=3.4.3",
    "httpx[socks]>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"api" = "free_gpt35_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/free_gpt35_api"]
